# calculatrice

./: CMakeLists.txt  main.cpp
Test/: calculator_test.cpp  mainTest.h
cal_and_feat/: calculator.h
